--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "url-shortener-reaktor",
   "version": "1.0.0",
   "description": "URL Shortener for Reaktor Application",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
