--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.11.0",
-    "express": "^4.11.2"
+    "express": "^4.11.2",
+    "newrelic": "^1.16.1"
   },
   "engines": {
     "node": "0.10.x"
